# cv-proj-be

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
3d_loc_artifacts/floor_1_model/: transform.txt  transform_2d.txt
3d_loc_artifacts/floor_2_model/: transform.txt  transform_2d.txt
3d_localization/ace/: ace_loc.py  ace_trainer.py  dataset.py
alembic/: env.py
alembic/versions/: 20260505_0001_init_navigation_graph.py  20260506_0002_graph_versioning.py  20260507_0003_vertex_snap_and_edge_width.py  20260517_0004_vertex_name.py  20260517_0005_vertex_type.py
app/: api.py  main.py
app/core/: config.py
app/db/: session.py
app/features/ai/: client.py  dto.py  prompts.py  service.py
app/features/coordinates/: __init__.py
app/features/import/: dependencies.py  repository.py  router.py  schemas.py  service.py
app/features/localization/: dependencies.py  router.py  schemas.py  service.py
app/features/navigation/: dependencies.py  dto.py  models.py  repository.py  router.py  schemas.py  service.py
